--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "doc/themes/hugo-book"]
-	path = doc/themes/hugo-book
+[submodule "themes/hugo-book"]
+	path = themes/hugo-book
 	url = https://github.com/alex-shpak/hugo-book
