init: change the init website

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "My New Hugo Site",
-  "short_name": "My New Hugo Site",
+  "name": "慧响寰宇",
+  "short_name": "慧响寰宇",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
