--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,30 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-publishDir = "./docs"
+baseURL = 'https://universe.withounder.com/'
+languageCode = 'zh-cn'
+title = '慧响寰宇'
 theme = 'hugo-book'
+publishDir = "./docs"
 
+# Book configuration
+disablePathToLower = true
+enableGitInfo = false
+
+# Needed for mermaid/katex shortcodes
+[markup]
+[markup.goldmark.renderer]
+  unsafe = true
+
+[markup.tableOfContents]
+  startLevel = 1
+
+[params]
+  BookTheme = 'light'
+  BookToC = true
+  # BookMenuBundle = '/menu'
+  BookSection = 'docs'
+  # BookRepo = 'https://github.com/idealboulevard/zh-CN'
+  BookDateFormat = '2006-01-02'
+  BookSearch = false
+  BookComments = true
+  BookPortableLinks = true
+  BookServiceWorker = true
+  BookTranslatedOnly = false
